  or when using the wrong argument names, you will now get a
  TypeError, in conformity with standard Python behaviour.

- **Breaking change**

  Removed the ``KeyExtractor`` class from the API. Callables used in
  predicate construction now expect the same arguments as the dispatch
  function.

- **Breaking change**

  Removed the ``argnames`` attribute from ``Predicate`` and its
  descendant.

- The second argument for ``match_class`` is now optional; if you
  don't supply it ``match_class`` will generate a predicate function
  that extracts that name by default.

- The second argument for ``match_instance`` is now optional; if you
  don't supply it ``match_instance`` will generate a predicate function
  that extracts that name by default.

- Include doctests in Tox and Travis.

- We now use virtualenv and pip instead of buildout to set up the
  development environment. The development documentation has been
  updated accordingly.

- As we reached 100% code coverage for pytest, coveralls integration
  was replaced by the ``--fail-under=100`` argument of ``coverage
  report`` in the tox coverage test.

0.9.3 (2016-07-18)
==================

- Minor fixes to documentation.

- Add tox test environments for Python 3.4 and 3.5, PyPy 3 and PEP 8.

- Make Python 3.5 the default Python environment.

- Changed location ``NoImplicitLookupError`` was imported from in
  ``__init__.py``.

0.9.2 (2014-11-13)
==================

- Reg was a bit too strict; when you had multiple (but not single)
  predicates, Reg would raise KeyError when you put in an unknown
  key. Now they're just being silently ignored, as they don't do any
  harm.

- Eliminated a check in ``ArgExtractor`` that could never take place.

- Bring test coverage back up to 100%.

- Add converage configuration to ignore test files in coverage
  reporting.

0.9.1 (2014-11-11)
==================

- A bugfix in the behavior of the fallback logic. In situations with